package NYT.NScheduler.NProto;

option go_package = "a.yandex-team.ru/yt/go/proto/client/scheduler";

////////////////////////////////////////////////////////////////////////////////

message TSpecPatch
{
    required string path = 1;
    required string value = 2; // YSON
}

////////////////////////////////////////////////////////////////////////////////
